<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rise</string>
    <string name="scanButtonText">Scan!</string>
    <string name="addAlarmText">Add alarm</string>
    <string name="detailsAlarmName">Alarm name</string>
    <string name="detailsRepeatWeekly">Repeat weekly</string>
    <string name="detailsSunday">Sunday</string>
    <string name="detailsMonday">Monday</string>
    <string name="detailsTuesday">Tuesday</string>
    <string name="detailsWednesday">Wednesday</string>
    <string name="detailsThursday">Thursday</string>
    <string name="detailsFriday">Friday</string>
    <string name="detailsSaturday">Saturday</string>
    <string name="detailsAlarmTone">Alarm tone</string>
    <string name="detailsAlarmToneDefault">Select an alarm tone</string>
    <string name="detailsAlarmSave">Save alarm</string>
    <string name="detailsAlarmDelete">Delete alarm</string>
    <string name="alarmItemSunday">S</string>
    <string name="alarmItemMonday">M</string>
    <string name="alarmItemTuesday">T</string>
    <string name="alarmItemWednesday">W</string>
    <string name="alarmItemThursday">T</string>
    <string name="alarmItemFriday">F</string>
    <string name="alarmItemSaturday">S</string>
    <string name="alarmAlert">Alarm!</string>
    <string name="alarmDefaultName">Alarm name</string>
    <string name="scanTapToScan">Tap to scan</string>
    <string name="scanConfirmExit">Are you sure you want to exit without scanning? :(</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
