<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alarmItemTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="00 : 00"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/alarmItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/alarmItemTime"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_toStartOf="@+id/alarmItemToggle"
            android:layout_toEndOf="@+id/alarmItemTime"
            android:text="Medium Text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/alarmItemToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/alarmItemSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/alarmItemTime"
            android:text="@string/alarmItemSunday"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/alarmItemMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/alarmItemSunday"
            android:layout_below="@+id/alarmItemTime"
            android:layout_marginStart="4dp"
            android:text="@string/alarmItemMonday"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/alarmItemTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/alarmItemMonday"
            android:layout_below="@+id/alarmItemTime"
            android:layout_marginStart="4dp"
            android:text="@string/alarmItemTuesday"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/alarmItemWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/alarmItemTuesday"
            android:layout_below="@+id/alarmItemTime"
            android:layout_marginStart="4dp"
            android:text="@string/alarmItemWednesday"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/alarmItemThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/alarmItemWednesday"
            android:layout_below="@+id/alarmItemTime"
            android:layout_marginStart="4dp"
            android:text="@string/alarmItemThursday"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/alarmItemFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/alarmItemThursday"
            android:layout_below="@+id/alarmItemTime"
            android:layout_marginStart="4dp"
            android:text="@string/alarmItemFriday"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/alarmItemSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/alarmItemFriday"
            android:layout_below="@+id/alarmItemTime"
            android:layout_marginStart="4dp"
            android:text="@string/alarmItemSaturday"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </RelativeLayout>

</FrameLayout>