<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:padding="25dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <TextView
        android:id="@+id/alarmScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/alarmAlert"
        android:textSize="40sp" />

    <TextClock
        android:id="@+id/alarmScreenTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarmScreenName"
        android:textSize="50sp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:format12Hour="h:mm a" />

    <TextView
        android:id="@+id/alarmScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarmScreenTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/alarmDefaultName"
        />

    <Button
        android:id="@+id/alarmScreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/scanButtonText"
        android:onClick="startScan"/>
    
</RelativeLayout>

